# Edge

./: .gitignore  .gitmodules  CMakeLists.txt
Edge/Demo/: CMakeLists.txt
Edge/Demo/DemoFramework/: CMakeLists.txt
Edge/Demo/DemoFramework/Public/EdgeDemoFramework/CameraController/: CameraController.h  DefaultCameraController.cpp  DefaultCameraController.h  StaticCameraController.h
Edge/Demo/DemoFramework/Public/EdgeDemoFramework/Demo/: Demo.h  DemoPlugin.h  PreInitedDemo.cpp  PreInitedDemo.h
Edge/Demo/DemoFramework/Public/EdgeDemoFramework/DemoApplication/: DemoApplication.cpp  DemoApplication.h
Edge/Demo/DemoLauncher/: CMakeLists.txt
Edge/Demo/DemoLauncher/Public/EdgeDemoLauncher/: Launcher.cpp
Edge/Demo/Demos/: CMakeLists.txt
Edge/Demo/Demos/Collision/: CMakeLists.txt
Edge/Demo/Demos/Collision/TestBounceCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/Collision/TestBoxStackCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/Collision/TestFrictionDemo/: CMakeLists.txt
Edge/Demo/Demos/Collision/TestGJKCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/Collision/TestSpheresBoxCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/Collision/TestSpheresCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/Constraints/: CMakeLists.txt
Edge/Demo/Demos/Constraints/TestFixConstraintDemo/: CMakeLists.txt
Edge/Demo/Demos/Constraints/TestHingeConstraintDemo/: CMakeLists.txt
Edge/Demo/Demos/Constraints/TestKeepDistanceConstraintDemo/: CMakeLists.txt
Edge/Demo/Demos/Constraints/TestPrismaticConstraintDemo/: CMakeLists.txt
Edge/Demo/Demos/DebugDrawDemo/: CMakeLists.txt
Edge/Demo/Demos/DebugDrawDemo/Public/DebugDrawDemo/: DebugDrawDemo.cpp  DebugDrawDemo.h  DebugDrawDemoPlugin.cpp  DebugDrawDemoPlugin.h
Edge/Demo/Demos/FireworksDemo/: CMakeLists.txt
Edge/Demo/Demos/FireworksDemo/Public/FireworksDemo/: FireworksDemo.cpp  FireworksDemo.h  FireworksDemoPlugin.cpp  FireworksDemoPlugin.h
Edge/Demo/Demos/IKDemo/: CMakeLists.txt
Edge/Demo/Demos/IKDemo/Public/IKDemo/: IKDemo.cpp  IKDemo.h  IKDemoPlugin.cpp  IKDemoPlugin.h
Edge/Demo/Demos/TestBoxCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/TestBoxCollisionDemo/Public/TestBoxCollisionDemo/: TestBoxCollisionDemo.cpp  TestBoxCollisionDemo.h  TestBoxCollisionDemoPlugin.cpp  TestBoxCollisionDemoPlugin.h
Edge/Demo/Demos/TestCastDemo/: CMakeLists.txt
Edge/Demo/Demos/TestCastDemo/Public/TestCastDemo/: TestCastDemo.cpp  TestCastDemo.h  TestCastDemoPlugin.cpp  TestCastDemoPlugin.h
Edge/Demo/Demos/TestCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/TestCollisionDemo/Public/TestCollisionDemo/: TestCollisionDemo.cpp  TestCollisionDemo.h  TestCollisionDemoPlugin.cpp  TestCollisionDemoPlugin.h
Edge/Demo/Demos/TestSpheresCollisionDemo/: CMakeLists.txt
Edge/Demo/Demos/TestSpheresCollisionDemo/Public/TestSpheresCollisionDemo/: TestSpheresCollisionDemo.cpp  TestSpheresCollisionDemo.h  TestSpheresCollisionDemoPlugin.cpp
Edge/Framework/: CMakeLists.txt
Edge/Framework/Framework/: CMakeLists.txt
Edge/Framework/Framework/Public/EdgeFramework/: FrameworkCore.h
Edge/Framework/Framework/Public/EdgeFramework/Application/: Application.cpp  Application.h  ApplicationInitUtils.h
Edge/Framework/Framework/Public/EdgeFramework/EventController/: Event.h  EventController.h
Edge/Framework/Framework/Public/EdgeFramework/Platform/: MonitorInfo.h  Platform.h  PlatformPlugin.h
Edge/Framework/Framework/Public/EdgeFramework/PluginController/: ExternalPluginCore.h  Plugin.h  PluginController.cpp  PluginController.h  PluginGeneral.h  PluginHandle.cpp  PluginHandle.h  PluginLoader.h  PluginModule.h
Edge/Framework/Framework/Public/EdgeFramework/Visualizer/: FontProvider.h
Edge/Framework/Framework/Public/EdgeFramework/WindowController/: Window.cpp  Window.h  WindowController.cpp  WindowController.h  WindowEventController.cpp  WindowEventController.h  WindowEvents.h  WindowHandle.cpp  WindowHandle.h
Edge/Framework/Plugins/: CMakeLists.txt
Edge/Framework/Plugins/D3D11GraphicPlatformPlugin/: CMakeLists.txt
Edge/Framework/Plugins/D3D11GraphicPlatformPlugin/Public/D3D11GraphicPlatformPlugin/: D3D11ComPtrDefinitions.h  D3D11Core.h  D3D11DeferredContext.cpp  D3D11DeferredContext.h  D3D11GraphicDevice.cpp  (+5 more)
Edge/Framework/Plugins/DefaultRenderPlugin/: CMakeLists.txt  DefaultRenderPluginConfig.xml.tpl  InstallAssetsAndConfig.cmake
Edge/Framework/Plugins/Win32PlatformPlugin/: CMakeLists.txt
Edge/Launcher/: CMakeLists.txt
Edge/Launcher/Private/EdgeLauncher/: Launcher.cpp
Edge/Physics/: CMakeLists.txt
Edge/Physics/Public/EdgePhysics/Physics/: Physics.cpp  Physics.h  PhysicsCore.cpp  PhysicsCore.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorldReference.h
Edge/Physics/Public/EdgePhysics/Visualizer/: DebugVisualizationDataController.cpp  DebugVisualizationDataController.h
Edge/Plugins/: CMakeLists.txt
Edge/Plugins/D3D11GraphicPlatformPlugin/: CMakeLists.txt
Edge/Plugins/D3D11GraphicPlatformPlugin/Public/D3D11GraphicPlatformPlugin/: D3D11ComPtrDefinitions.h  D3D11Core.h  D3D11DeferredContext.cpp  D3D11DeferredContext.h  D3D11GraphicDevice.cpp  D3D11GraphicDevice.h  D3D11GraphicPlatform.cpp  D3D11GraphicPlatform.h  D3D11GraphicPlatformPlugin.cpp  D3D11GraphicPlatformPlugin.h
Edge/Plugins/DefaultRenderPlugin/: CMakeLists.txt  InstallAssetsAndConfig.cmake
Edge/Plugins/DefaultRenderPlugin/Assets/Shaders/: Box.vshader  Color.shader  Line.pshader  Plane.vshader  Point.vshader  SolidPixelInput.shader  SolidPixelShaderCommon.shader  WireframeBox.vshader  WireframePixelInput.shader  WireframePlane.vshader  WireframeSphere.pshader  WireframeSphere.vshader
Edge/Plugins/DefaultRenderPlugin/Public/DefaultRenderPlugin/: DefaultRenderer.cpp  DefaultRenderer.h  DefaultRendererPlugin.cpp  DefaultRendererPlugin.h  PackedColor.h  RenderDataBufferCache.cpp  RenderDataBufferCache.h  RenderDatas.h
Edge/Plugins/Win32PlatformPlugin/: CMakeLists.txt
Edge/Plugins/Win32PlatformPlugin/Public/Win32PlatformPlugin/: Win32Platform.cpp  Win32Platform.h  Win32PlatformPlugin.cpp  Win32PlatformPlugin.h  Win32PlatformUtils.h
(+612 files in other folders)
